micro-style.css: fixed text overflow in pre tags

--- a/micro-style.css
+++ b/micro-style.css
@@ -211,6 +211,7 @@ pre {
   padding: 1rem 1.4rem;
   margin: 0;
   overflow: visible;
+  overflow-x: auto;
 }
 
 pre code {
